# acai

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  cog.toml  deny.toml  justfile  prek.toml  prompt.md  report.md  review.md  rustfmt.toml
.acai/: acai.json  settings.toml  settings.toml.example
.agents/: .gitignore
.agents/skills/auditing-binary-size/: SKILL.md
.agents/skills/debugging-acai/: SKILL.md
.agents/skills/debugging-cake/: SKILL.md
.agents/skills/evaluating-acai/: SKILL.md
.agents/skills/evaluating-cake/: SKILL.md
.agents/skills/session-investigation/: SKILL.md
.cake/: hooks.json  hooks.json.example  settings.toml  settings.toml.example
.cake/hooks/: format-edited-file.sh  rust-command-failure-context.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  release.yml  scheduled.yml
docs/: responses-api.md  session-management.md  streaming-json-output.md  tech-debt.md
docs/adr/: 001-agent-loop-architecture.md  002-agent-skills.md  003-settings-profiles.md  004-append-only-session-task-events.md  005-command-hooks.md
docs/design-docs/: api-retry-strategy.md  cli.md  conversation-types.md  hooks.md  index.md  logging.md  models.md  prompts.md  sandbox.md  session-management.md  settings.md  skills.md  streaming-json-output.md  tools.md
docs/references/: chat-completions-api.md  responses-api.md
docs/specs/: index.md
docs/specs/simplified-cli/: prd.md
examples/: safehouse.custom.generated.sb  test-policy.sb
scripts/: check-rust-toolchain.sh
src/: cli.rs  clients.rs  config.rs  errors.rs  exit_code.rs  files.rs  hooks.rs  logger.rs  macros.rs  main.rs  messages.rs  models.rs  open_ai.rs
src/cli/: cmd_config.rs  cmd_runner.rs  entry.rs  mod.rs
src/cli/cmds/: chat.rs  complete.rs  instruct.rs  lsp.rs  mod.rs  pipe.rs  prompt_generator.rs
src/clients/: agent.rs  anthropic.rs  chat_completion.rs  chat_completions.rs  chat_types.rs  completion.rs  embeddings.rs  google.rs  mistral.rs  mod.rs  open_ai.rs  providers.rs  response.rs  responses.rs  retry.rs  types.rs
src/clients/snapshots/: cake__clients__chat_completions__tests__build_messages_assistant_text_with_tool_calls.snap  cake__clients__chat_completions__tests__build_messages_empty_history.snap  cake__clients__chat_completions__tests__build_messages_grouped_function_calls.snap  cake__clients__chat_completions__tests__build_messages_reasoning_with_assistant_text.snap  cake__clients__chat_completions__tests__build_messages_reasoning_with_tool_calls.snap  cake__clients__chat_completions__tests__build_messages_simple_conversation.snap  cake__clients__chat_completions__tests__build_messages_with_reasoning_placeholder.snap  cake__clients__chat_completions__tests__chat_request_kimi_tool_calls.snap  cake__clients__responses__tests__responses_request_minimal.snap  cake__clients__responses__tests__responses_request_with_tools_provider_and_reasoning.snap  cake__clients__types__tests__to_streaming_json_function_call.snap  cake__clients__types__tests__to_streaming_json_function_call_output.snap  cake__clients__types__tests__to_streaming_json_message_with_id_and_status.snap  cake__clients__types__tests__to_streaming_json_reasoning_plain_summary.snap
src/clients/tools/: bash.rs  bash_safety.rs  edit.rs  mod.rs  (+2 more)
src/config/: data_dir.rs  defaults.rs  hooks.rs  mod.rs  model.rs  session.rs  settings.rs  skills.rs  worktree.rs
src/context/: embedded_instructions.rs  mod.rs
src/llm_api/: anthropic.rs  client.rs  google.rs  json_schema.rs  mistral.rs  mod.rs  ollama.rs  open_ai.rs
src/lsp/: backend.rs  code_actions.rs  complete.rs  mod.rs  runner.rs
src/models/: messages.rs  mod.rs  roles.rs
src/operations/: complete.rs  document.rs  fix.rs  instruct.rs  mod.rs  optimize.rs  suggest.rs
src/prompts/: builder.rs  default-prompt.hbs  mod.rs  prompt.hbs
src/tools/: generate_edits.rs  lint_code.rs  mod.rs
tests/: exit_codes.rs  stdin_handling.rs
tests/support/: mod.rs
(+19 files in other folders)
