[package]
name = "acai"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[profile.release]
lto = true
codegen-units = 1

[profile.optimized]
inherits = "release"
lto = false
codegen-units = 16

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6.1.0"
dirs = "6.0"
hex = "0.4"
log = "0.4.29"
log4rs = "1.4.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
